tests/fixtures/type_checker/error/fixed_implicit_cast.galaxy
int i1;
fixed f1;
bool r1;

void test_base()
{
    i1 = f1;
    // ^ERR

    i1 = 1 + 1;

    i1 = 1.0 + 1;
    // ^ERR

    i1 = 1 + 1.0;
    // ^ERR

    i1 = 1 + f1;
    // ^ERR

    i1 = f1 + 1;
    // ^ERR
}

void test_logic()
{
    r1 = f1 == f1 && f1 != f1;
    r1 = i1 >= i1 || i1 <= i1;
    r1 = f1 > i1 && f1 < i1;
}
